# nonsense

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  main.cxx
include/nonsense/: algorithm.hxx  iota.hxx  iota_array.hxx  mem_array.hxx  non_value.hxx  nonvalue.hxx  span.hxx  sso_single_allocator.hxx  type_aliases.hxx  type_traits.hxx  utility.hxx  voided_cast.hxx
test/: CMakeLists.txt  algorithm.cxx  mem_array.cxx
tests/nonsense/: CMakeLists.txt  iota_array.cxx  mem_array.cxx  non_value.cxx  sso_single_allocator.cxx  type_traits.cxx  voided_cast.cxx
